// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/ <LabelText> component render snapshot tests should render type email to suppress inputMode and allow multiple values 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={true}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="email"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render type not search with non standard browser props - ignored 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    autoCorrect="on"
    disabled={false}
    id="txtID"
    mozactionhint="go"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="url"
    value="VALUE"
    x-moz-errormessage="NON-STANDARD ERROR MESSAGE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render type search with non standard browser props 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    autoCorrect="on"
    disabled={false}
    id="txtID"
    incremental={true}
    mozactionhint="go"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    results={5}
    role="searchbox"
    spellCheck={false}
    type="search"
    value="VALUE"
    x-moz-errormessage="NON-STANDARD ERROR MESSAGE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render type tel or url to suppress inputMode and multiple 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="tel"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render with aria label + labelby and empty label 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  
  <input
    aria-invalid={false}
    aria-labelledby="ID-ARIA-LABELLEDBY"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    inputMode="decimal"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="text"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render with aria label and empty label 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  
  <input
    aria-invalid={false}
    aria-label="ARIA LABEL"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="text"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render with charSize prop not default of 20 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    size={44}
    spellCheck={false}
    type="text"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render with minimal properties 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="text"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render with pattern that has ^ $ in it 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={false}
    name="txtID"
    pattern="^start(.+)end$"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="text"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render with pattern to parse regex properly 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={false}
    name="txtID"
    pattern="^start(.+)end$"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="text"
    value="VALUE"
  />
</label>
`;
